crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__method_call_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/mod.rs
assertion_line: 311
expression: "goto_definition(r#\"\n%! main.sp\nenum struct Foo {\n    void foo() {};\n}\n\nFoo foo;\n\nvoid bar() {\n    foo.foo();\n         |\n         ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 7,
        "character": 8
      },
      "end": {
        "line": 7,
        "character": 11
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 17
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 9
      },
      "end": {
        "line": 1,
        "character": 12
      }
    }
  }
]
